@@ -36,6 +36,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 ## New Plugins
 
 ## Fixes
+- Steam launcher now launches Dwarf Fortress via the Steam client
 
 ## Misc Improvements
 
